--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,8 @@ This is a _sample_ book written in **Markdown**. You can use anything that Pando
 The **bookdown** package can be installed from CRAN or Github:
 
 ```{r eval=FALSE}
-install.packages("bookdown")
+install.packages(c("bookdown", "rmarkdown", "knitr", "ggplot2", "plotly", "lattice", "gridExtra", "cowplot", "patchwork", "ggpubr", "ggstatsplot", "PerformanceAnalytics", "Hmisc", "corrplot", "ggcorrplot", "diagram", "igraph", "ggraph", "kableExtra", "xtable", "flextable", "DT", "formattable", "dplyr", "tidyr", "data.table", "tibble", "forcats", "sf", "leaflet", "tmap", "maps", "mapview", "visNetwork", "networkD3", "sna", "Rgraphviz", "pagedown", "tinytex", "reticulate", "bslib", "thematic", "shiny", "quarto"))
+
 # or the development version
 # devtools::install_github("rstudio/bookdown")
 ```
