--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,6 +1,6 @@
 # Introduction {#intro}
 
-This is an introduction of the Value chain Hacker infrastructure;
+This is an introduction of the Value chain Hacker infrastructure; Test test test why doesn't this work
 
 Quick overview;
 
